# document-classification-chatbot

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: settings.py
backend/rag/: index.py  qa.py  rerank.py
backend/services/: gemini.py
backend/store/: cache.py  vector_store.py
backend/utils/: audio.py  dedupe.py  doc_loader.py  text_chunk.py
data/cache/: index.faiss  meta.json
