[project]
name = "document-classification-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydub>=0.25.1",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
    "tqdm>=4.67.1",
]
